# luv

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindLua.cmake  Makefile  Makefile.lua  Makefile.luajit  Makefile.luvit  README.md  appveyor.yml  bump.sh  common.c  common.h  crasher.lua  direct.c  direct.h  docgen.lua  docs.lua  docs.md  lgtm.yml  luajit.cmake  luv-1.22.0-0.rockspec  luv-1.22.0-1.rockspec  luv-1.4.2-1.rockspec  luv-1.4.2-2.rockspec  luv-1.6.1-1.rockspec  luv-1.6.1-2.rockspec  luv-1.6.1.rockspec  luv-1.7.4-0.rockspec  luv-1.7.4-1.rockspec  luv-1.7.4-2.rockspec  luv-1.7.4-3.rockspec  luv-1.7.4-4.rockspec  luv-1.7.4-5.rockspec  luv-1.8.0-0.rockspec  luv-1.8.0-1.rockspec  (+32 more)
.ci/: bindcov.sh  check_docs.sh  docscov.sh  install.bat  libuv2840.supp  libuv3020.supp  lsan_build.supp  make_rockspec.sh  platform.sh  pthread_create.supp  set_compiler_env.bat  setenv_lua.sh  setup_lua.sh  setup_min_libuv.sh  valgrind_mem.supp  winmake.bat
.github/workflows/: ci.yml  codeql.yml
cmake/: config.h.in
cmake/Modules/: FindLibuv.cmake  FindLua.cmake  FindLuaJIT.cmake
cmake/uv/: CMakeLists.txt
docs/: docgen.lua  docs.lua  docs.md  meta.lua
examples/: cqueues-main.lua  cqueues-slave.lua  echo-server-client.lua  killing-children.lua  lots-o-dns.lua  repl.lua  talking-to-children.lua  tcp-cluster.lua  test-child.lua  test-dns.lua  test-fs.lua  test-master.lua  test-spawn-stdio.lua  test-spawn.lua  test-tcp.lua  test-timer.lua  timers.lua
examples/uvbook/: helloworld.lua  idle-basic.lua  onchange.lua  pipe-echo-client.lua  pipe-echo-server.lua  queue-work.lua  tcp-echo-client.lua  tcp-echo-server.lua  thread-create.lua  uvcat.lua  uvtee.lua
lib/: tap.lua  utils.lua
rockspecs/: luv-1.22.0-0.rockspec  luv-1.22.0-1.rockspec  luv-1.8.0-4.rockspec  luv-1.9.0-0.rockspec  luv-1.9.0-1.rockspec  luv-1.9.0-2.rockspec  luv-1.9.0-3.rockspec  luv-1.9.0-4.rockspec  luv-1.9.0-5.rockspec  luv-1.9.1-0.rockspec  luv-1.9.1-1.rockspec  luv-scm-0.rockspec
src/: async.c  check.c  common.c  common.h  constants.c  dns.c  fs.c  fs_event.c  fs_poll.c  handle.c  idle.c  lhandle.c  lhandle.h  loop.c  lreq.c  lreq.h  lthreadpool.h  luv.c  luv.h  luv_functions.c  metrics.c  misc.c  pipe.c  platform.c  poll.c  prepare.c  private.h  process.c  req.c  schema.c  schema.h  signal.c  stream.c  synch.c  tcp.c  test.c  thread.c  timer.c  tty.c  udp.c  (+5 more)
tests/: manual-test-cb-non-string-error.lua  manual-test-cluster.lua  manual-test-exit.lua  manual-test-external-loop.lua  manual-test-leaks.lua  manual-test-metrics.lua  manual-test-without-uv.run.lua  platform.lua  run.lua  test-async.lua  test-callbacks.lua  test-cluster.lua  test-conversions.lua  test-coroutines-require.lua  test-coroutines.lua  test-dns.lua  test-fs.lua  test-handle.lua  test-leaks.lua  test-loop.lua  test-metrics.lua  test-misc.lua  test-pipe.lua  test-prepare-check-idle-async.lua  test-prepare-check-idle.lua  test-process.lua  test-req.lua  test-server-fd-sharing.lua  test-sigchld-after-lua_close.sh  test-signal.lua  test-stream.lua  test-tcp.lua  test-thread.lua  test-timer.lua  test-tty.lua  test-udp.lua  test-work.lua
